# matching-engine

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DockerFile  README.md  conanfile.py
.github/workflows/: build.yaml
include/gridx/matching/adapters/kafka/: KafkaConsumerConfig.hpp  KafkaOrderConsumer.hpp  KafkaProducer.hpp  KafkaProducerConfig.hpp  KafkaTopics.hpp  OrderEventMapper.hpp  ProtobufOrderCodec.hpp
include/gridx/matching/common/: Types.hpp  Version.hpp
include/gridx/matching/domain/: GridTransferRule.hpp  MarketId.hpp  MatchingResult.hpp  Order.hpp  PriceLevel.hpp  Trade.hpp  marketId.hpp
include/gridx/matching/engine/: OrderProcessor.hpp
include/gridx/matching/expiry/: ExpiryManager.hpp
include/gridx/matching/matching/: MatchingEngine.hpp  SameZoneMatcher.hpp  TradeManager.hpp
include/gridx/matching/orderbook/: BuyBook.hpp  MarketBook.hpp  OrderBook.hpp  OrderBook.tpp  SellBook.hpp  ZoneOrderBook.hpp
include/gridx/matching/validation/: OrderValidator.hpp  ValidationResult.hpp
src/: main.cpp
src/adapters/kafka/: KafkaOrderConsumer.cpp  KafkaProducer.cpp  OrderEventMapper.cpp  ProtobufOrderCodec.cpp
src/common/: Version.cpp
src/engine/: OrderProcessor.cpp
src/expiry/: ExpiryManager.cpp
src/matching/: MatchingEngine.cpp  SameZoneMatcher.cpp  TradeManager.cpp
src/orderbook/: MarketBook.cpp  ZoneOrderBook.cpp
src/validation/: OrderValidator.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/unit/: CMakeLists.txt  VersionTest.cpp
tests/unit/adapters/kafka/: OrderEventMapperTest.cpp  ProtobufOrderCodecTest.cpp
tests/unit/expiry/: ExpiryManagerTest.cpp
tests/unit/matching/: SameZoneMatcherTest.cpp
tests/unit/orderbook/: MarketBookTest.cpp  OrderBookTest.cpp  ZoneOrderBookTest.cpp
tests/unit/validation/: OrderValidatorTest.cpp
